# nft-russian-roulette

./: .dockerignore  .gitignore  README.rst
backend/: Makefile  README.rst  pyproject.toml
backend/docker/: docker-compose.yaml
backend/src/nft_russian_roulette/: constants.py  exceptions.py  utils.py
backend/src/nft_russian_roulette/chain_watcher/: __main__.py  cli.py  watcher.py
backend/src/nft_russian_roulette/nft_generator/: generator.py
backend/src/nft_russian_roulette/web/: app.py  models.py
backend/tests/: test_nft_russian_roulette.py
contracts/: package-lock.json  package.json
contracts/contracts/: Gravestone.sol  Roulette.sol  TestERC721.sol
contracts/scripts/: deploy.js
docker/: .env.template  backend.Dockerfile  docker-compose.yaml  interface.Dockerfile
interface/: index.html  package-lock.json  package.json
interface/src/: App.vue  accounts.js  config.js  erc721MetadataFetching.js  index.css  main.js  routes.js  urls.js
interface/src/assets/: erc721ABI.json  rouletteABI.json
interface/src/components/: Btn.vue  ConnectBtn.vue  GameStatusPage.vue  InitGamePage.vue  NFT.vue  PlayerStatus.vue
